rnsc/tests/snapshots/error-lexer-directives-dot_final.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.final
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_final.rns:1:1 ]
   │
 1 │ .final
   │ ───┬──  
   │    ╰──── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
